@@ -1,3 +1,9 @@
+2012-01-06 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/ralloc.c,
+	  src/stm8/gen.c:
+	  Infrastructure for the stm8 port.
+
 2013-01-06 Borut Razem <borut.razem AT gmail.com>
 
 	* src/SDCCasm.c, src/SDCCasm.h: excluded unused asm mappings
